Refactor send_mail_about_registration in register.php
- Use class user_dialog_email in register.php

- Add csrf token to class sessions to enhance security
- Use csrf token in register.php
- Change "user name" to "username" everywhere
- Selenium:
  - Update registration test page RegisterPage.java
    - Inrease robustness by using attribute-based XPath selectors for better maintainability
  - Refactor getVersionStringShould() in AboutPage.java
  - Add some debug log messages to TestInstallation.java
# Differences to be committed: 	
#	diff --git a/locale/de_DE/LC_MESSAGES/messages.mo b/locale/de_DE/LC_MESSAGES/messages.mo 	
#	index da607f5..939764c 100644 	
#	Binary files a/locale/de_DE/LC_MESSAGES/messages.mo and b/locale/de_DE/LC_MESSAGES/messages.mo differ 	
#	diff --git a/locale/de_DE/LC_MESSAGES/messages.po b/locale/de_DE/LC_MESSAGES/messages.po 	
#	index d2817a0..2c82e95 100644 	
#	--- a/locale/de_DE/LC_MESSAGES/messages.po 	
#	+++ b/locale/de_DE/LC_MESSAGES/messages.po 	
#	@@ -1,8 +1,8 @@ 	
#	 msgid "" 	
#	 msgstr "" 	
#	 "Project-Id-Version: pharmacy duty roster\n" 	
#	-"POT-Creation-Date: 2024-10-26 22:03+0200\n" 	
#	-"PO-Revision-Date: 2024-10-26 22:04+0200\n" 	
#	+"POT-Creation-Date: 2024-11-13 21:53+0100\n" 	
#	+"PO-Revision-Date: 2024-11-13 21:54+0100\n" 	
#	 "Last-Translator: Martin Mandelkow <poedit@martin-mandelkow.de>\n" 	
#	 "Language-Team: MaMaKow <poedit-ux31a@martin-mandelkow.de>\n" 	
#	 "Language: de_DE@formal\n" 	
#	@@ -22,19 +22,19 @@ msgstr "Die Datei wird verarbeitet." 	
#	  	
#	 #: src/js/javascript.js: 	
#	 #: src/php/classes/PDR/Database/AbsenceDatabaseHandler.php: 	
#	+#: src/php/classes/PDR/Database/OvertimeDatabaseHandler.php: 	
#	 #: src/php/classes/class.database_wrapper.php: 	
#	 #: src/php/classes/class.database_wrapper.php: 	
#	-#: src/php/classes/class.overtime.php: src/php/classes/class.overtime.php: 	
#	 msgid "There was an error while querying the database." 	
#	 msgstr "Bei der Kommunikation mit der Datenbank trat ein Fehler 